fix: fixed offers list overflow-y

--- a/src/components/OffersContainer/OffersContainer.module.scss
+++ b/src/components/OffersContainer/OffersContainer.module.scss
@@ -14,6 +14,6 @@
    background: var(--gray-lightest, #f8f8f8);
    @include mobile {
       flex-direction: column;
-      padding: 40px 10px;
+      padding: 25px 10px 15px 10px;
    }
 }
